Updating component typography and nav

--- a/components/index.html
+++ b/components/index.html
@@ -7,9 +7,7 @@
         <link rel="stylesheet" href="../css/main.css" >
     </head>
     <body>
-        <h1>LiveWire</h1>
-        
-        <h1>Web Design Study</h1>
+        <h1>Web Components</h1>
         <h2>Typography Defaults</h2>
         <article class="component">
             <h3 class="component__name">body</h3>
@@ -28,8 +26,8 @@
                 <img src="img/h2.png" alt="h2" >
                 <img src="img/h5.png" alt="h5" >
             </div>
-            <div class="component__code .legal">
-                <h1>LIVEWIRE</h1>
+            <div class="component__code">
+                <h1>motorcycles</h1>
                 <h2>S2 Alpinista</h2>
                 <h5>stay informed</h5>
             </div>
@@ -40,11 +38,11 @@
             <div class="component__image">
                 <img src="img/header/nav.png" alt="body copy" >
             </div>
-            <div class="component__code .legal">
+            <div class="component__code">
                 <nav>
                     <ul>
                         <li>motorcycles</li>
-                        <li>experiences</li>
+                        <li>experience</li>
                         <li>support</li>
                         <li>shop</li>
                     </ul>
