Adding hero to component

--- a/components/index.html
+++ b/components/index.html
@@ -50,5 +50,16 @@
             </div>
         </article>
         
+        <article class="component">
+            <h3 class="component__name">Hero</h3>
+            <div class="component__image">
+                <img src="img/hero.png" alt="hero" >
+            </div>
+            <div class="component__code">
+                <h1 class="hero">
+                    <span>livewire</span> electric motorcycles
+                </h1>
+            </div>
+        </article>
     </body>
 </html>
