Adding fontawesome and banner component

--- a/components/index.html
+++ b/components/index.html
@@ -5,6 +5,10 @@
         <title>Components | LiveWire</title>
         <link rel="stylesheet" href="../css/normalize.css" >
         <link rel="stylesheet" href="../css/main.css" >
+        <link rel="stylesheet" href="../assets/fontawesome/css/fontawesome.min.css" />
+        <link rel="stylesheet" href="../assets/fontawesome/css/solid.min.css" >
+        <link rel="stylesheet" href="../assets/fontawesome/css/regular.min.css" >
+        <link rel="stylesheet" href="../assets/fontawesome/css/brands.min.css" >
     </head>
     <body>
         <h1>Web Components</h1>
@@ -50,6 +54,16 @@
             </div>
         </article>
         
+        <article class="component">
+            <h3 class="component__name">banner</h3>
+            <div class="component__image">
+                <img src="img/banner.png" alt="banner">
+            </div>
+            <div class="component__code banner">
+                <p><a href="!#">FINANCING AS LOW AS 1.49% APR*</a><i class="fa-solid fa-x close"></i></p>
+            </div>
+        </article>
+
         <article class="component">
             <h3 class="component__name">Hero</h3>
             <div class="component__image">
