updating banner component

--- a/components/index.html
+++ b/components/index.html
@@ -59,8 +59,8 @@
             <div class="component__image">
                 <img src="img/banner.png" alt="banner">
             </div>
-            <div class="component__code banner">
-                <p><a href="!#">FINANCING AS LOW AS 1.49% APR*</a><i class="fa-solid fa-x close"></i></p>
+            <div class="component__code">
+                <p class="banner"><a href="!#">FINANCING AS LOW AS 1.49% APR*</a><i class="fa-solid fa-x close"></i></p>
             </div>
         </article>
 
