--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ img {
     background-color: var(--color-brand-orange);
     text-align: center;
     display: relative;
-    padding: .5rem 0;
+    padding: 1rem 0;
 }
 .banner a {
     color: var(--color-black);
