--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ nav ul {
 }
 nav li {
     display: inline-block;
-    font-family: var(--font-SignalMono-ExtraLight);
+    font-family: var(--font-SignalMono);
     text-transform: uppercase;
     font-size: .82rem;
     letter-spacing: .25rem;
