--- a/components/index.html
+++ b/components/index.html
@@ -38,12 +38,47 @@
         </article>
 
         <article class="component">
-            <h3 class="component__name">nav</h3>
+            <h3 class="component__name">page-header</h3>
+            <div class="component__image">
+                <img src="img/header-small.png" alt="Small screen header" >
+                <img src="img/header.png" alt="Large screen header" >
+            </div>
+            <div class="component__code">
+                <header class="page-header">
+                    <div class="logo">
+                        <img class="large" src="https://www.livewire.com/_next/static/media/logo-landmark.3749a96b.svg" alt="Livewire Logo">
+                        <img class="small" src="https://www.livewire.com/_next/static/media/logo-symbol.6439bdb4.svg" alt="Livewire Logo">    
+                    </div>
+                    <nav class="nav-main large">
+                        <ul>
+                            <li>motorcycles <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg></li>
+                            <li>experience <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg></li>
+                            <li>support <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg></li>
+                            <li>shop <svg width="12" height="6" viewBox="0 0 12 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.41 2.20852e-07L6 3.62583L10.59 1.65874e-06L12 1.11625L6 5.86625L-2.20852e-07 1.11625L1.41 2.20852e-07Z" fill="currentColor"></path></svg></li>
+                        </ul>
+                    </nav>
+                    <div class="nav-bar">
+                        <div class="nav-bar__menu small">
+                            <i class="fa-solid fa-bars small"></i>
+                            <p class="small">menu</p>
+                        </div>
+                        <div class="nav-bar__langage-switcher">
+                            <img class="language-switcher__language" src="https://www.livewire.com/next-assets/icons/flags/US.svg" alt="Locale United States" width="24" height="18">
+                            <p class="language-switcher__language">EN</p>
+                        </div>
+                    </div>
+                    
+                </header>
+            </div>
+        </article>
+
+        <article class="component">
+            <h3 class="component__name">nav-main</h3>
             <div class="component__image">
                 <img src="img/header/nav.png" alt="body copy" >
             </div>
             <div class="component__code">
-                <nav>
+                <nav class="nav-main">
                     <ul>
                         <li>motorcycles</li>
                         <li>experience</li>
