Adding radio button controls

--- a/components/index.html
+++ b/components/index.html
@@ -38,6 +38,24 @@
         </article>
 
         <article class="component">
+            <h3 class="component__name">Atoms</h3>
+            <div class="component__image">
+                <img src="img/button.png" alt="button" >
+                <img src="img/button--primary.png" alt="button-primary" >
+                <img src="img/button--primary-focused.png" alt="button-primary with focus" >
+
+            </div>
+            <div class="component__code">
+                <div class="button">buy now</div>
+                <div class="button button--primary">explore</div>
+                <form>
+                    <label for="glacier-silver"><input type="radio" id="glacier-silver" name="color" value="glacier silver" checked="">Glacier Silver</label>
+                    <label for="asphalt-black"><input type="radio" id="asphalt-black" name="color" value="black">Asphalt Black</label>
+                </form>
+            </div>
+        </article>
+
+        <article class="component">
             <h3 class="component__name">page-header</h3>
             <div class="component__image">
                 <img src="img/header-small.png" alt="Small screen header" >
