Adding Feature component

--- a/components/index.html
+++ b/components/index.html
@@ -46,8 +46,8 @@
 
             </div>
             <div class="component__code">
-                <div class="button">buy now</div>
-                <div class="button button--primary">explore</div>
+                <a class="button" href="#!">buy now</a>
+                <a class="button button--primary" href="#!">explore</a>
                 <form>
                     <label for="glacier-silver"><input type="radio" id="glacier-silver" name="color" value="glacier silver" checked="">Glacier Silver</label>
                     <label for="asphalt-black"><input type="radio" id="asphalt-black" name="color" value="black">Asphalt Black</label>
@@ -126,6 +126,25 @@
                 <h1 class="hero">
                     <span>livewire</span> electric motorcycles
                 </h1>
+            </div>
+        </article>
+
+        <article class="component">
+            <h3 class="component__name">Feature</h3>
+            <div class="component__image">
+                <img src="img/feature.png" alt="feature" >
+            </div>
+            <div class="component__code">
+                <div class="feature">
+                    <div class="feature__info">
+                        <h2 class="feature__title">S2 models for as low as 1.49% APR*</h2>
+                        <p class="feature__description">All LiveWire S2 models are now available for a limited time for as low as 1.49% APR.* Enjoy an unparalleled electric riding experience with low monthly payments.</p>
+                        <a href="#!" class="button">SEE OFFERS</a>
+                    </div>
+                    <div class="feature__image">
+                        <img src="https://livewire.widen.net/content/lvzl2g1ipf/web/Incentives_Trio_FeaturtedContent.jpg" alt="feature">
+                    </div>
+                </div>
             </div>
         </article>
     </body>
