Adding tiles component

--- a/components/index.html
+++ b/components/index.html
@@ -147,5 +147,60 @@
                 </div>
             </div>
         </article>
+
+        <article class="component">
+            <h3 class="component__name">Tiles</h3>
+            <div class="component__image">
+                <img src="img/tiles.png" alt="tiles" >
+            </div>
+            <div class="component__code">
+                <div class="tiles">
+                    <div class="tile">
+                        <h2 class="tile__title">
+                            demo rides
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 19"><path fill-rule="evenodd" d="M14.303 8.95 9.747 4.627l.801-.754L16.15 9.19l.4.378-.401.377-5.506 5.185-.798-.758 4.59-4.32H2.25v-1.1z" clip-rule="evenodd"></path></svg>
+                        </h2>
+                        <p class="tile_text">Find a retail location and experience a LiveWire electric motorcycle near you.</p>
+                        <div class="tile__image">
+                            <img src="https://livewire.widen.net/content/w74cydm3oo/web/tile_s2ap_home_demoride.jpg?w=2048&q=75" alt="" >
+                        </div>
+                    </div>
+                    <div class="tile">
+                        <h2 class="tile__title">
+                            reviews
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 19"><path fill-rule="evenodd" d="M14.303 8.95 9.747 4.627l.801-.754L16.15 9.19l.4.378-.401.377-5.506 5.185-.798-.758 4.59-4.32H2.25v-1.1z" clip-rule="evenodd"></path></svg>
+                        </h2>
+                        <p class="tile__text">Get expert reviews and watch what others are saying about LiveWire electric motorcycles.</p>
+                        <div class="tile__image">
+                            <img src="https://livewire.widen.net/content/zsu4jlaqpa/web/tile_s2ap_home_reviews.jpg?w=2048&q=75" alt="" >
+                        </div>
+                    </div>
+                    <div class="tile">
+                        <h2 class="tile__title">
+                            financing
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 19"><path fill-rule="evenodd" d="M14.303 8.95 9.747 4.627l.801-.754L16.15 9.19l.4.378-.401.377-5.506 5.185-.798-.758 4.59-4.32H2.25v-1.1z" clip-rule="evenodd"></path></svg>
+                        </h2>
+                        <p class="tile__text">
+                            Transform the every day into urban adventure and beyond with helpful, innovative financing options.
+                        </p>
+                        <p class="tile__image">
+                            <img src="https://livewire.widen.net/content/tf53ai46bf/web/tile_s2ap_home_news.jpg" alt="" >
+                        </p>
+                    </div>
+                    <div class="tile">
+                        <h2 class="tile__title">
+                            apparel and accessories
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 19"><path fill-rule="evenodd" d="M14.303 8.95 9.747 4.627l.801-.754L16.15 9.19l.4.378-.401.377-5.506 5.185-.798-.758 4.59-4.32H2.25v-1.1z" clip-rule="evenodd"></path></svg>
+                        </h2>
+                        <p class="tile__text">
+                            Visit our shop and explore new apparel, accessories, and replacement parts.
+                        </p>
+                        <div class="tile__image">
+                            <img src="https://livewire.widen.net/content/pfjct48vis/web/tile_s2ap_home_apparel.jpg" >
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
     </body>
 </html>
