--- a/css/main.css
+++ b/css/main.css
@@ -243,6 +243,30 @@ input[type="radio"]:checked {
     width: 100%;
 }
 /*
+* tiles
+*/
+.tiles {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    padding: 2rem;
+}
+.tile__title {
+
+    font-family: var(--font-Aeonik-Black);
+    font-size: 2.5rem;
+}
+.tile__title > svg {
+    height: 1.5rem;
+    fill: var(--color-brand-orange);
+}
+.tile__image img {
+    width: 100%;
+}
+.tile__image:hover {
+    transform: scale(1.05);
+}
+/*
 * component
 */
 .component {
@@ -264,6 +288,13 @@ input[type="radio"]:checked {
     border: 1px solid #ccc;
 }
 
+@media screen and (min-width:  768px) {
+    .tiles {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
 @media screen and (min-width: 1200px) {
     .small {
         visibility: hidden;
@@ -283,3 +314,4 @@ input[type="radio"]:checked {
     }
 
 }
+
