--- a/components/index.html
+++ b/components/index.html
@@ -202,5 +202,66 @@
                 </div>
             </div>
         </article>
+
+        <article class="compnent">
+            <h3 class="component__name">Stay-Informed</h3>
+            <div class="component__image">
+                <img src="img/stay-informed--small.png" alt="stay-informed small" >
+                <img src="img/stay-informed--large.png" alt="stay-informed large" >
+
+            </div>
+            <div class="component__code">
+                <section class="stay-informed">
+                    <div>
+                        <h2 class="stay-informed__title">Stay Informed</h2>
+
+                        <p class="stay-informed__text">
+                            Sign-up for LiveWire email, news and product launches to always be in the know.
+                        </p>
+                    </div>
+                    <form class="stay-informed__form">
+                        <input type="text" id="email" class="stay-informed__entry" placeholder="Enter your email">
+                        <button type="submit">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 19"><path fill-rule="evenodd" d="M14.303 8.95 9.747 4.627l.801-.754L16.15 9.19l.4.378-.401.377-5.506 5.185-.798-.758 4.59-4.32H2.25v-1.1z" clip-rule="evenodd"></path></svg>
+                        </button>
+                        <label for="email">I agree to receive marketing communications from LiveWire.</label>
+                    </form>
+                    <!-- <ul class="stay-informed__socials socials-list">
+                        <li class="socials-list__social-link"><a href="https://www.instagram.com/livewireev"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li class="socials-list__social-link"><a href="https://www.facebook.com/LiveWireEV"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li class="socials-list__social-link"><a href="https://www.youtube.com/c/livewireev"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li class="socials-list__social-link"><a href="https://open.spotify.com/user/31xk7t52ux36rjp3aa4tltvq6tnm?si=1844e6ac2bc14488"><i class="fa-brands fa-spotify"></i></a></li>
+                        <li class="socials-list__social-link"><a href="https://music.apple.com/us/curator/livewire-ev/1625943929"><i class="fa-solid fa-music"></i></a></li>
+                    </ul> -->
+                    <ul class="stay-informed__socials socials-list">
+                        <li class="socials-list__social-link">
+                            <a href="https://www.instagram.com/livewireev">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="31" fill="none" role="graphics-document"><path fill="#BFBFBF" d="M24.125 5.321a1.823 1.823 0 1 0 0 3.647 1.823 1.823 0 0 0 0-3.647m6.989 3.677a11.5 11.5 0 0 0-.7-3.692 7.5 7.5 0 0 0-1.761-2.689A7.14 7.14 0 0 0 25.963.87a11.1 11.1 0 0 0-3.691-.714c-1.61-.091-2.127-.091-6.26-.091-4.132 0-4.649 0-6.26.09A11.1 11.1 0 0 0 6.062.87a7.3 7.3 0 0 0-2.69 1.747 7.14 7.14 0 0 0-1.746 2.69 11.1 11.1 0 0 0-.715 3.69c-.09 1.611-.09 2.128-.09 6.26 0 4.133 0 4.65.09 6.26a11.1 11.1 0 0 0 .715 3.692 7.14 7.14 0 0 0 1.747 2.689 7.3 7.3 0 0 0 2.689 1.747c1.18.446 2.43.688 3.692.714 1.61.091 2.127.091 6.26.091 4.132 0 4.648 0 6.259-.09a11.1 11.1 0 0 0 3.691-.715 7.14 7.14 0 0 0 2.69-1.747 7.4 7.4 0 0 0 1.762-2.69c.433-1.183.67-2.43.699-3.691 0-1.61.091-2.127.091-6.26 0-4.132 0-4.649-.091-6.26m-2.735 12.337a8.5 8.5 0 0 1-.516 2.825 4.65 4.65 0 0 1-1.14 1.748 4.85 4.85 0 0 1-1.747 1.139 8.5 8.5 0 0 1-2.826.517c-1.52.076-2.081.09-6.077.09s-4.558 0-6.077-.09a8.7 8.7 0 0 1-2.948-.456 5 5 0 0 1-1.67-1.14 4.56 4.56 0 0 1-1.125-1.747 8.4 8.4 0 0 1-.608-2.887c0-1.519-.091-2.08-.091-6.077 0-3.995 0-4.557.091-6.077a8.4 8.4 0 0 1 .532-2.886 4.56 4.56 0 0 1 1.2-1.672 4.8 4.8 0 0 1 1.671-1.215 8.7 8.7 0 0 1 2.887-.517c1.52 0 2.081-.09 6.077-.09s4.558 0 6.077.09c.965.011 1.92.186 2.826.517.69.256 1.31.673 1.808 1.215a4.65 4.65 0 0 1 1.14 1.672c.337.925.512 1.901.516 2.886.076 1.52.091 2.082.091 6.077s-.015 4.558-.09 6.077M16.012 7.462a7.794 7.794 0 1 0 7.81 7.794 7.78 7.78 0 0 0-7.81-7.794m0 12.854a5.06 5.06 0 1 1 0-10.119 5.06 5.06 0 0 1 0 10.119"></path></svg>
+                            </a>
+                        </li>
+                        <li class="socials-list__social-link">
+                            <a href="https://www.facebook.com/LiveWireEV">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" fill="none" role="graphics-document"><path fill="#BFBFBF" d="M23.382 8.102h2.856V3.27a40 40 0 0 0-4.162-.212c-4.133 0-6.959 2.522-6.959 7.14v3.98h-4.664v5.41h4.664v13.855h5.591V19.587h4.65l.698-5.408h-5.348v-3.45c0-1.594.426-2.627 2.674-2.627"></path></svg>
+                            </a>
+                        </li>
+                        <li class="socials-list__social-link">
+                            <a href="https://www.youtube.com/c/livewireev">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" fill="none" role="graphics-document"><path fill="#BFBFBF" d="M35.024 14.771c.075-2.174-.4-4.333-1.383-6.274a4.44 4.44 0 0 0-2.613-1.52 119 119 0 0 0-12.717-.47c-4.228-.074-8.458.078-12.67.455a4.36 4.36 0 0 0-2.219 1.124c-1.367 1.261-1.519 3.419-1.67 5.242a73 73 0 0 0 0 9.845 14.5 14.5 0 0 0 .455 3.038 4.8 4.8 0 0 0 1.079 2.067 4.35 4.35 0 0 0 2.263 1.185c3.276.404 6.576.572 9.876.501 5.317.076 9.982 0 15.497-.425a4.38 4.38 0 0 0 2.324-1.186c.425-.425.743-.946.927-1.519.543-1.667.81-3.412.79-5.165.06-.851.06-5.986.06-6.898m-20.146 7.81v-9.405l8.994 4.725c-2.522 1.398-5.85 2.978-8.994 4.68"></path></svg>
+                            </a>
+                        </li>
+                        <li class="socials-list__social-link">
+                            <a href="https://open.spotify.com/user/31xk7t52ux36rjp3aa4tltvq6tnm?si=1844e6ac2bc14488">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" role="graphics-document"><path fill="#BFBFBF" d="M16.035.517C7.347.517.303 7.56.303 16.25s7.044 15.733 15.732 15.733c8.69 0 15.733-7.044 15.733-15.733S24.724.517 16.035.517m7.676 22.68a1.373 1.373 0 0 1-1.864.525 16.3 16.3 0 0 0-6.367-2.005 16.4 16.4 0 0 0-6.655.69 1.369 1.369 0 0 1-.832-2.606 19.05 19.05 0 0 1 7.764-.806 19 19 0 0 1 7.427 2.34c.66.368.897 1.202.527 1.862m1.883-4.779A1.366 1.366 0 0 1 23.75 19a21.4 21.4 0 0 0-7.756-2.313 21.3 21.3 0 0 0-8.117.722 1.368 1.368 0 0 1-.758-2.629c2.97-.857 6.05-1.13 9.151-.816 3.08.314 6.022 1.19 8.746 2.61.668.35.93 1.175.58 1.845m.682-3.975c-.205 0-.412-.047-.61-.144a26.4 26.4 0 0 0-9.163-2.645 26.4 26.4 0 0 0-9.526.753 1.368 1.368 0 0 1-.703-2.644 29.2 29.2 0 0 1 10.508-.83 29.1 29.1 0 0 1 10.104 2.917 1.369 1.369 0 0 1-.61 2.593"></path></svg>
+                            </a>
+                        </li>
+                        <li class="socials-list__social-link">
+                            <a href="https://music.apple.com/us/curator/livewire-ev/1625943929">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="31" fill="none" role="graphics-document"><path fill="#BFBFBF" d="M21.537 18.683V8.562a.828.828 0 0 0-.997-.81l-10.99 2.29a.966.966 0 0 0-.768.945V25.64a4.6 4.6 0 0 1-4.454 4.6l-.23.007a3.46 3.46 0 0 1-3.57-3.458 3.514 3.514 0 0 1 2.689-3.416l2.705-.652a1.59 1.59 0 0 0 1.214-1.543V4.874c0-.783.549-1.459 1.315-1.62L21.436.523c.9-.19 1.747.497 1.747 1.417v21.047a4.173 4.173 0 0 1-3.898 4.163l-.802.053a3.367 3.367 0 0 1-3.58-3.127 3.55 3.55 0 0 1 2.79-3.739l3.041-.659c.468-.102.803-.516.803-.995"></path></svg>
+                            </a>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+        </article>
     </body>
 </html>
