--- a/components/index.html
+++ b/components/index.html
@@ -263,5 +263,20 @@
                 </section>
             </div>
         </article>
+
+        <article class="media-section">
+            <h3 class="component__name">media-section</h3>
+            <h3 class="component__image">
+                <img src="img/media-section.png" alt="media-section" >
+            </h3>
+            <div class="component__code">
+                <section class="media-section">
+                    <video playsinline="" class="Video_video__9h5Ot" poster="https://livewire.widen.net/content/jpct9rfbog/web/home-page-2.0-video-poster.jpg" autoplay="" loop="">
+                        <source src="https://livewire.widen.net/content/2iufgdei87/mp4/230181_BrandHP_v02_PR422_mov_web_265.mp4" type="">
+                    </video>
+                    <a hre="#!" class="button">See Our Vision</a>
+                </section>
+            </div>
+        </article>
     </body>
 </html>
