--- a/components/index.html
+++ b/components/index.html
@@ -220,7 +220,7 @@
                         </p>
                     </div>
                     <form class="stay-informed__form">
-                        <input type="text" id="email" class="stay-informed__entry" placeholder="Enter your email">
+                        <input type="email" id="email" class="stay-informed__entry" placeholder="Enter your email">
                         <button type="submit">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 19"><path fill-rule="evenodd" d="M14.303 8.95 9.747 4.627l.801-.754L16.15 9.19l.4.378-.401.377-5.506 5.185-.798-.758 4.59-4.32H2.25v-1.1z" clip-rule="evenodd"></path></svg>
                         </button>
@@ -274,7 +274,7 @@
                     <video playsinline="" class="Video_video__9h5Ot" poster="https://livewire.widen.net/content/jpct9rfbog/web/home-page-2.0-video-poster.jpg" autoplay="" loop="">
                         <source src="https://livewire.widen.net/content/2iufgdei87/mp4/230181_BrandHP_v02_PR422_mov_web_265.mp4" type="">
                     </video>
-                    <a hre="#!" class="button">See Our Vision</a>
+                    <a href="#!" class="button">See Our Vision</a>
                 </section>
             </div>
         </article>
