Adding financial-disclaimer component

--- a/components/index.html
+++ b/components/index.html
@@ -264,7 +264,7 @@
             </div>
         </article>
 
-        <article class="media-section">
+        <article class="compoenet">
             <h3 class="component__name">media-section</h3>
             <h3 class="component__image">
                 <img src="img/media-section.png" alt="media-section" >
@@ -276,6 +276,16 @@
                     </video>
                     <a href="#!" class="button">See Our Vision</a>
                 </section>
+            </div>
+        </article>
+
+        <article class="compoent">
+            <h3 class="component__name">financial-disclaimer</h3>
+            <div class="component__image">
+                <img src="img/financial-discalaimer.png" alt="financial disclaimer" >
+            </div>
+            <div class="component__code">
+                <p class="financial-disclaimer">*Financing offers available only on new S2 LiveWire motorcycles financed through Eaglemark Savings Bank (ESB) and subject to credit approval. Not all applicants will qualify. Stated offers are available only to high credit tier customers at ESB. The APR may vary based on the applicant’s past credit performance and the term of the loan. For example, a 2025 S2 Alpinista™ with an MSRP of $15,999, 10% down payment and amount financed of $14,399.10, 72-month repayment term, and 1.49% APR results in monthly payments of $209.18. For a 2024 S2 Del Mar® with an MSRP of $16,249, 10% down payment and amount financed of $14,624.10, 72-month repayment term, and 1.49% APR results in monthly payments of $212.45. For a 2024 S2 Mulholland™ with an MSRP of $16,499, 10% down payment and amount financed of $14,849.10, 72-month repayment term, and 1.49% APR results in monthly payments of $215.72. In these examples, customer is responsible for applicable taxes, title, licensing fees and any other fees or charges at the time of sale. APR is calculated according to the simple interest method. Not valid in conjunction with other offers. Other terms, conditions, and limitations may apply. See your LiveWire Dealership for details. This Financing Offer is valid during the period of March 1, 2025 - April 30, 2025.</p>
             </div>
         </article>
     </body>
