--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,18 @@ input[type="radio"]:checked {
     margin: 1rem auto;
 }
 /*
+* financial-disclaimer
+*/
+.financial-disclaimer {
+    font-family: var(--font-Aeonik);
+    font-size: .75rem;
+    font-weight: 400;
+    line-height: .9rem;
+    max-width: 75rem;
+    margin: auto;
+    padding: 1rem;
+}
+/*
 * component
 */
 .component {
