Adding image-accordian component

--- a/components/index.html
+++ b/components/index.html
@@ -130,6 +130,40 @@
         </article>
 
         <article class="component">
+            <h3 class="component__name">image-accordion</h3>
+            <div class="component__image">
+                <img src="img/image-accordion.png" alt="Image Accordion" >
+            </div>
+            <div class="component__code">
+                <ul class="image-accordion">
+                    <li class="image-accordion__item" style="background-image: url('https://livewire.widen.net/content/ivb6ftmajs/web/HP-Carousel-S2AP-Build.png');">
+                        <!-- <picture>
+                            <img src="https://livewire.widen.net/content/ivb6ftmajs/web/HP-Carousel-S2AP-Build.png" alt="" >
+                        </picture> -->
+                        <div class="image-accordian__content">
+                            <h2>The S2<br>ALPINISTA</h2>
+                            <p>The electric sport standard.</p>
+                            <a href="#!" class="button">BUILD YOURS</a>
+                        </div>
+                    </li>
+                    <li class="image-accordion__item" style="background-image: url('https://livewire.widen.net/content/f3swxizxlg/web/HP-Carousel-S2-Incentive.png');">
+                        <!-- <picture>
+                            <img src="https://livewire.widen.net/content/f3swxizxlg/web/HP-Carousel-S2-Incentive.png" alt="" >
+                        </picture> -->
+                        <h2>Limited-time<br>1.49% APR*</h2>
+                        <p>Special financing eligible for all S2<br>models until March 31.</p>
+                        <a href="#!" class="button">LEARN MORE</a>
+                    </li>
+                    <li class="image-accordion__item" style="background-image: url('https://livewire.widen.net/content/mazpp4xv6g/web/HP-Carousel-PULSE.png');">
+                        <h2>THE PULSE</h2>
+                        <p>Your hub to discover new collabs,<br>exclusive content, reviews, and<br>technical how-tos to get the most<br>out of your LiveWire experience.</p>
+                        <a href="" class="button">GET INSPIRED</a>
+                    </li>
+                </ul>
+            </div>
+
+        </article>
+        <article class="component">
             <h3 class="component__name">Feature</h3>
             <div class="component__image">
                 <img src="img/feature.png" alt="feature" >
