--- a/components/index.html
+++ b/components/index.html
@@ -157,7 +157,7 @@
                     <li class="image-accordion__item" style="background-image: url('https://livewire.widen.net/content/mazpp4xv6g/web/HP-Carousel-PULSE.png');">
                         <h2>THE PULSE</h2>
                         <p>Your hub to discover new collabs,<br>exclusive content, reviews, and<br>technical how-tos to get the most<br>out of your LiveWire experience.</p>
-                        <a href="" class="button">GET INSPIRED</a>
+                        <a href="#!" class="button">GET INSPIRED</a>
                     </li>
                 </ul>
             </div>
