--- a/css/main.css
+++ b/css/main.css
@@ -120,9 +120,10 @@ label {
     font-size: .9rem;
     letter-spacing: .15rem;
     text-transform: uppercase;
+    display: inline-block;
 }
 input[type="radio"] {
-    display: inline-block;
+    display: inline;
     border-radius: 50;
     height: 3rem;
     width: 3rem;
@@ -317,6 +318,17 @@ input[type="radio"]:checked {
     100% {visibility: visible;}    
 }
 /*
+* carousel
+*/
+.carousel {
+    padding: 1rem;
+    border: 1px solid red;
+}
+.slide {
+    text-align: center;
+    border: 1px solid green;
+}
+/*
 * Feature
 */
 .feature {
@@ -471,9 +483,6 @@ input[type="radio"]:checked {
     padding-left: 0;
     text-transform: uppercase;
     line-height: 2rem;
- }
- .site-map li {
-
  }
  .site-map a {
     text-decoration: none;
