Adding partial styling of carousel component

--- a/components/index.html
+++ b/components/index.html
@@ -174,6 +174,7 @@
                                     <div class="detail-list__pricing">
                                         <p class="detail-list__msrp">
                                             $15,999
+                                            <i class="fa-thin fa-circle-info"></i>
                                             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="15" fill="none" ><path fill="currentColor" d="M7 1.844c3.227 0 5.906 2.652 5.906 5.906A5.9 5.9 0 0 1 7 13.656 5.88 5.88 0 0 1 1.094 7.75 5.9 5.9 0 0 1 7 1.844m0-.875C3.254.969.219 4.03.219 7.75A6.78 6.78 0 0 0 7 14.531c3.719 0 6.781-3.035 6.781-6.781C13.781 4.031 10.72.969 7 .969m-.984 9.406a.333.333 0 0 0-.328.328v.219c0 .191.136.328.328.328h1.968a.33.33 0 0 0 .329-.328v-.219a.35.35 0 0 0-.329-.328h-.328V6.547a.35.35 0 0 0-.328-.328H6.016a.33.33 0 0 0-.328.328v.219c0 .191.136.328.328.328h.328v3.281zM7 3.813a.88.88 0 0 0-.875.874c0 .493.383.875.875.875a.88.88 0 0 0 .875-.875A.9.9 0 0 0 7 3.813"></path></svg>
                                         </p>
                                         <a class="detail-list__incentives">Check for incentives</a>
