--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,6 @@ input[type="radio"] {
     border-radius: 50;
     height: 3rem;
     width: 3rem;
-    border: 1px solid var(--color-black)
 }
 input[type="radio"]:checked {
     box-shadow:0 0 0 2px var(--color-brand-orange);
@@ -342,6 +341,9 @@ input[type="radio"]:checked {
     font-family: var(--font-Aeonik-Black);
     font-size: 2rem;
     margin-top: 0;
+}
+.slide fieldset {
+    border: none;
 }
 .slide__specs {
     display: flex;
